Fixed width overflow.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,7 +4,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   min-height: 100vh;
   @include font($font-base-size, 400);
